[package]
name = "ca1"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
cairo-rs = { version = "0.19.2", features = ["png", "svg", "pdf"] }
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
memmap = "0.7.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
